# rules_nodejs_gazelle

./: .bazelignore  .bazelrc  .gitignore  BUILD  LICENSE  MODULE.bazel  README.md  WORKSPACE  defs.bzl  deps.bzl  go.mod  go.sum
.bcr/: config.yml  metadata.template.json  presubmit.yml  source.template.json
.github/workflows/: ci.yaml  release.yml  workspace_snippet.sh
examples/: BUILD  test_runner.go
examples/aggregate_asset_modules/b/: BUILD.out
examples/aggregate_asset_singletons/: BUILD.in
examples/disjoint_module/: BUILD.in
examples/fix/: BUILD.out
examples/folder_rules/my_module/: BUILD.in  BUILD.out
examples/import_alias/: BUILD.in
examples/import_alias/module/: BUILD.out
examples/jest_mock/: BUILD.out
examples/jsx_conversion/: package.json
examples/lookup_types/subfolder/: BUILD.out
examples/module_self_import/my_module/: BUILD.out  some_other_file.ts
examples/nextjs/: .bazelignore  BUILD.bazel  MODULE.bazel  README.md  WORKSPACE
examples/nextjs/apps/alpha/: BUILD.bazel
examples/nextjs/apps/alpha/pages/: BUILD.bazel  index.test.tsx
examples/nextjs/apps/alpha/pages/__snapshots__/: index.test.tsx.snap
examples/nextjs/apps/alpha/pages/api/: BUILD.bazel
examples/nextjs/apps/alpha/public/: BUILD.bazel
examples/nextjs/apps/alpha/styles/: BUILD.bazel
examples/nextjs/bazel/: jest_test.bzl
examples/npm_label/: BUILD.in
examples/react_example/: with_import.tsx
examples/simple_library/: BUILD.in
examples/simple_module/: index.ts
examples/simple_npm_library/: BUILD.out
examples/visibility/: BUILD.out
examples/web_assets_module/: BUILD.out
gazelle/: BUILD  colors.go  configure.go  gazelle_test.go  generate.go  generate_test.go  kinds.go  parse.go  parse_test.go  pkgname.go  resolve.go
gazelle/js/: BUILD  config.go  deps.bzl  gazelle_test.go  js.go  js_test.go  kinds.go  lang.go  parse_test.go  pkgname_test.go  resolve.go
gazelle/js/testdata/aggregate_asset_modules/: BUILD.in  BUILD.out
gazelle/js/testdata/aggregate_asset_singletons/: BUILD.out
gazelle/js/testdata/disabled/: BUILD.out
gazelle/js/testdata/disabled/module/: BUILD.out
gazelle/js/testdata/fix/: BUILD.out
gazelle/js/testdata/import_alias/: BUILD.out
gazelle/js/testdata/import_alias/module/: BUILD.out
gazelle/js/testdata/lookup_types/: BUILD.in  a.ts
gazelle/js/testdata/simple_library/: BUILD.in  BUILD.out
gazelle/js/testdata/simple_module/: BUILD.in
gazelle/js/testdata/simple_npm_library/: BUILD.in  BUILD.out
gazelle/js/testdata/web_assets_module/: BUILD.in
gazelle/testdata/aggregate_asset_singletons/a/: BUILD.out
gazelle/testdata/aggregate_asset_singletons/b/: BUILD.out
gazelle/testdata/disabled/: BUILD.out
gazelle/testdata/disjoint_module/: BUILD.out
gazelle/testdata/disjoint_module/my_module/: BUILD.out  some_other_file.ts
gazelle/testdata/dynamic_import/: BUILD.out  a.ts  package.json
gazelle/testdata/fix/: BUILD.in
gazelle/testdata/folder_rules/: BUILD.out
gazelle/testdata/import_alias/: BUILD.out  a.ts
gazelle/testdata/jest_mock/: a.ts
gazelle/testdata/jsx_conversion/: BUILD.in  BUILD.out  b.js
gazelle/testdata/lookup_types/: BUILD.out  builtin.ts  package.json
gazelle/testdata/lookup_types/subfolder/: c.ts
gazelle/testdata/module_self_import/: BUILD.out  index.ts
gazelle/testdata/module_self_import/my_module/: index.ts
gazelle/testdata/npm_label/: BUILD.out  b.ts
gazelle/testdata/react_example/: BUILD.in  BUILD.out  js_with_import.jsx  package.json  without_import.tsx
gazelle/testdata/simple_library/: BUILD.out
gazelle/testdata/simple_module/: BUILD.out
gazelle/testdata/simple_module/SomeOtherFile/: BUILD.in  BUILD.out  index.ts
gazelle/testdata/simple_module/my_module/: BUILD.out  index.ts
gazelle/testdata/ts_conversion/: BUILD.in  BUILD.out
gazelle/testdata/visibility/: BUILD.in  BUILD.out
internal/: js_library.bzl  ts_definition.bzl  web_assets.bzl
tests/: BUILD  test_runner.go
tests/collect_all/: BUILD.out
tests/collect_all/my_module/: BUILD.out
tests/collect_all_nested/: index.ts
tests/collect_all_nested/my_module/: BUILD.in  BUILD.out
tests/collect_all_test_shards/: BUILD.in
tests/collect_all_test_shards/my_module/: BUILD.in  BUILD.out
tests/collect_all_test_shards/my_module/nested_module/: a.test.ts  b.test.ts  index.ts
tests/collect_asset_modules/: BUILD.in  BUILD.out
tests/collect_asset_singletons/: BUILD.in  BUILD.out
tests/collect_asset_singletons/a/: BUILD.out
tests/collect_asset_singletons/b/: BUILD.out
tests/collect_pages/: BUILD.in  WORKSPACE
tests/collect_pages/src/pages/: BUILD.in  BUILD.out  index.ts
tests/collect_pages/src/pages2/: BUILD.in  BUILD.out
tests/collect_targets/: BUILD.in  BUILD.out  index.ts
tests/collect_targets/src/page-tests/: BUILD.in  BUILD.out  test.test.ts
tests/collect_targets/src/pages/: BUILD.in  BUILD.out
tests/collect_targets/src/pages2/: BUILD.in  BUILD.out
tests/default_npm_label/: BUILD.in  BUILD.out
tests/disabled/: BUILD.out
tests/disjoint_module/: BUILD.in  BUILD.out
tests/disjoint_module/my_module/: BUILD.out
tests/disjoint_module/my_module/nested_module/: BUILD.out  index.ts
tests/dynamic_import/: BUILD.in  BUILD.out  a.ts  d.ts
tests/fix/: BUILD.out
tests/import_alias/: BUILD.out
tests/import_alias/module/: BUILD.out
tests/jest_mock/: BUILD.out
tests/jsx_conversion/: BUILD.in  BUILD.out
tests/lookup_types/: BUILD.in  BUILD.out
tests/lookup_types/subfolder/: BUILD.out
tests/module_self_import/: BUILD.in  BUILD.out
tests/module_self_import/my_module/: BUILD.out
tests/monorepo/: package.json
tests/monorepo/project_a/: BUILD.in  BUILD.out  a.ts  package.json
tests/react_example/: BUILD.in  BUILD.out  js_without_import.jsx
tests/simple_barrel/: BUILD.in  BUILD.out
tests/simple_barrel/SomeOtherFile/: BUILD.in  BUILD.out
tests/simple_library/: BUILD.out
tests/simple_npm_library/: BUILD.out  a.ts  package.json
tests/ts_conversion/: BUILD.in  BUILD.out
tests/visibility/: BUILD.out
tests/web_assets_module/: BUILD.in  BUILD.out
(+13 files in other folders)
