load("//bazel:jest_test.bzl", "jest_test")
load("//bazel:ts_project.bzl", "ts_project")

# gazelle:js_nextjs_pages_root

jest_test(
    name = "index.test",
    srcs = ["index.test.tsx"],
    config = "//apps/alpha:jest.config",
    data = [
        ":pages",
        "//:node_modules/@testing-library/jest-dom",
        "//:node_modules/@testing-library/react",
        "//:node_modules/@types/jest",
        "//:node_modules/jest-environment-jsdom",
        "//:node_modules/jest-transform-stub",
        "//:node_modules/react",
        "//apps/alpha:package_json",
    ],
    snapshots = ["__snapshots__/index.test.tsx.snap"],
    visibility = ["//apps/alpha:__subpackages__"],
    deps = [
        ":pages",
        "//:node_modules/@testing-library/jest-dom",
        "//:node_modules/@testing-library/react",
        "//:node_modules/@types/jest",
        "//:node_modules/jest-environment-jsdom",
        "//:node_modules/jest-transform-stub",
        "//:node_modules/react",
        "//apps/alpha/pages/api",
    ],
)

ts_project(
    name = "pages",
    srcs = [
        "_app.tsx",
        "index.tsx",
    ],
    data = [
        "//:node_modules/@nextjs-example/one",
        "//:node_modules/next",
        "//:node_modules/react",
        "//apps/alpha:node_modules/is-even",
        "//apps/alpha/styles:assets",
    ],
    visibility = ["//apps/alpha:__subpackages__"],
    deps = [
        "//:node_modules/@nextjs-example/one",
        "//:node_modules/@types/react",
        "//:node_modules/next",
        "//:node_modules/react",
        "//apps/alpha:node_modules/@types/is-even",
        "//apps/alpha:node_modules/is-even",
        "//apps/alpha/pages/api",
    ],
)
